--- a/src/components/Cards/index.css
+++ b/src/components/Cards/index.css
@@ -45,6 +45,12 @@
         height: 100px;
     }
 }
+@media (max-width: 400px) {
+    .card{
+        width: 120px;
+        height: 120px;
+    }
+}
 .library-text{
     font-size: 12px;
     font-family: 'Roboto';
